--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.34",
+    "swiper": "^11.1.12",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
   },
